# Nova

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
electronics/: README.md
electronics/0.1-general/: README.md  toggle.py
electronics/0.2-chips/: README.md
electronics/1.0-clock & power/: README.md  optimise.py  optimise_toggle.py
electronics/chips/: README.md
electronics/clock & power/: README.md
electronics/general/: README.md
src/: CMakeLists.txt
src/alu/: CMakeLists.txt  README.md
src/alu/adders/: CMakeLists.txt  README.md  adder_16bit.cpp  adder_16bit_h  full_adder.cpp  full_adder.h  half_adder.cpp  half_adder.h  main.cpp
src/gates/: CMakeLists.txt
src/gates/gate_and/: CMakeLists.txt  gate_and.cpp  gate_and.h  main.cpp
src/gates/gate_nand/: gate_nand.h  (+3 more)
src/hardware/: CMakeLists.txt  and_gate.cpp  and_gate.h  bit8_adder.cpp  bit8_adder.h  construct.h  device.cpp  device.h  full_adder.cpp  full_adder.h  half_adder.cpp  half_adder.h  nand_gate.cpp  nand_gate.h  nor_gate.cpp  nor_gate.h  not_gate.cpp  not_gate.h  nxor_gate.cpp  nxor_gate.h  or_gate.cpp  or_gate.h  test_adders.cpp  test_gates.cpp  xor_gate.cpp  xor_gate.h
src/test_opcodes/: CMakeLists.txt  adder.h  bit.cpp  bit.h  bus.cpp  bus.h  control_bus.cpp  control_bus.h  control_register.h  counter.cpp  counter.h  device.h  incrementing_register.cpp  incrementing_register.h  logic.cpp  logic.h  main.cpp  negator.cpp  negator.h  not.cpp  not.h  ram.h  register.h  ring_counter.cpp  ring_counter.h  system.cpp  system.h  tests.cpp  tests.h
src/types/: CMakeLists.txt  types.h
(+12 files in other folders)
