
add_executable(test_opcodes
                main.cpp
                bit.cpp
                bus.cpp
                subbus.cpp
                control_bus.cpp
                register.cpp
                incrementing_register.cpp
                ring_counter.cpp
                system.cpp
                logic.cpp)